--- a/index.html
+++ b/index.html
@@ -52,11 +52,11 @@
 
 <h2 id="参加翻译">参加翻译</h2>
 
-<p>参见：<a href="https://l-m-sherlock.github.io/supermemo.guru-cn/CONTRIBUTING.md">CONTRIBUTING</a></p>
+<p>参见：<a href="https://l-m-sherlock.github.io/supermemo.guru-cn/CONTRIBUTING.html">CONTRIBUTING</a></p>
 
 <h2 id="目前翻译过翻译中的文集">目前翻译过/翻译中的文集</h2>
 
-<p><a href="https://l-m-sherlock.github.io/supermemo.guru-cn/I%20would%20never%20send%20my%20kids%20to%20school%E6%88%91%E6%B0%B8%E8%BF%9C%E4%B8%8D%E4%BC%9A%E9%80%81%E6%88%91%E7%9A%84%E5%AD%A9%E5%AD%90%E5%8E%BB%E5%AD%A6%E6%A0%A1/00.Content%E7%9B%AE%E5%BD%95.md">I would never send my kids to school我永远不会送我的孩子去学校</a></p>
+<p><a href="https://l-m-sherlock.github.io/supermemo.guru-cn/I%20would%20never%20send%20my%20kids%20to%20school%E6%88%91%E6%B0%B8%E8%BF%9C%E4%B8%8D%E4%BC%9A%E9%80%81%E6%88%91%E7%9A%84%E5%AD%A9%E5%AD%90%E5%8E%BB%E5%AD%A6%E6%A0%A1/00.Content%E7%9B%AE%E5%BD%95.html">I would never send my kids to school我永远不会送我的孩子去学校</a></p>
 
       </section>
     </div>
